# rts

./: .dockerignore  .drone.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Dockerfile  README  README.md  appveyor.yml  configure-debug  wercker.yml
assets/fonts/: open_sans_bold_14.xml  open_sans_regular_14.xml
assets/shaders/: .gitattributes  basic.frag  basic.vert  map.vert  text.frag
assets/textures/: grass.dds
include/dioptre/: application.h  camera_transform.h  component_interface.h  debug.h  graphics.h  locator.h  module.h  object.h  observer.h  state.h  subject.h  transform.h
include/dioptre/ai/: ai_interface.h  navigation_mesh.h
include/dioptre/ai/detour/: navigation_mesh.h
include/dioptre/ai/null/: ai.h
include/dioptre/ai/recast/: navigation_mesh.h
include/dioptre/behaviours/: rotate.h
include/dioptre/filesystem/: filesystem_interface.h  path_lookup.h
include/dioptre/filesystem/null/: filesystem.h
include/dioptre/filesystem/physfs/: filesystem.h
include/dioptre/font/: advance.h  bitmap.h  face.h  font_interface.h  glyph_slot.h
include/dioptre/font/freetype/: advance.h  bitmap.h  face.h  font.h  glyph_slot.h
include/dioptre/graphics/: atlas.h  basic_material.h  bounding_box.h  box_geometry.h  camera.h  camera_transform.h  component.h  debug.h  debug_material.h  geometry.h  graphics_interface.h  layer.h  line_geometry.h  map_material.h  material.h  mesh.h  object.h  opengl.h  orthographic_camera.h  perspective_camera.h  plane_geometry.h  projector.h  renderer_interface.h  scene.h  text_geometry.h  text_material.h  texture.h  transform.h  transform_observer.h  triangle_geometry.h
include/dioptre/keyboard/: key_handler_interface.h  keyboard_interface.h  keys.h
include/dioptre/math/: conversion.h  id.h  triangle.h
include/dioptre/mouse/: mouse_interface.h  position.h
include/dioptre/physics/: component.h  physics_interface.h  rigid_body.h  shape.h  transform_observer.h  world.h
include/dioptre/time/: time_interface.h
include/dioptre/window/: size.h  window_interface.h
include/engine/: graphics.h
include/rts/: ability.h  command_centre.h  game_object.h  human_player.h  map.h  selector.h  text.h  unit.h
include/rts/abilities/: move.h
include/rts/components/: edge_scroll_component.h
scripts/: install-dependencies  tests
shaders/: basic.frag  basic.vert  debug.vert  map.frag  simple.frag  text.frag  text.vert
src/: CMakeLists.txt  appinfo.h  main.cpp  window.cpp
src/application/: CMakeLists.txt  appinfo.h.in.cmake  main.cpp
src/dioptre/: CMakeLists.txt  application.cpp  camera_transform.cpp  component_interface.cpp  graphics.cpp  locator.cpp  module.cpp  object.cpp  state.cpp  transform.cpp
src/dioptre/ai/: ai_interface.cpp
src/dioptre/ai/detour/: navigation_mesh.cpp
src/dioptre/ai/recast/: navigation_mesh.cpp
src/dioptre/behaviours/: rotate.cpp
src/dioptre/filesystem/: path_lookup.cpp
src/dioptre/filesystem/physfs/: filesystem.cpp
src/dioptre/font/: advance.cpp  bitmap.cpp  face.cpp  glyph_slot.cpp
src/dioptre/font/freetype/: advance.cpp  bitmap.cpp  face.cpp  font.cpp  glyph_slot.cpp
src/dioptre/graphics/: atlas.cpp  basic_material.cpp  bounding_box.cpp  box_geometry.cpp  camera.cpp  camera_transform.cpp  component.cpp  debug.cpp  debug_material.cpp  geometry.cpp  graphics_interface.cpp  layer.cpp  line_geometry.cpp  map_material.cpp  material.cpp  mesh.cpp  object.cpp  orthographic_camera.cpp  perspective_camera.cpp  plane_geometry.cpp  projector.cpp  scene.cpp  text_geometry.cpp  text_material.cpp  texture.cpp  transform.cpp  transform_observer.cpp  triangle_geometry.cpp
src/dioptre/graphics/opengl/: atlas.cpp  basic_material.cpp  box_geometry.cpp  buffer_manager.cpp  debug.cpp  debug_material.cpp  error.cpp  geometry.cpp  graphics.cpp  map_material.cpp  plane_geometry.cpp  renderer.cpp  shader.cpp  shader.h  shader_factory.cpp  text_geometry.cpp  text_material.cpp  texture.cpp  texture_factory.cpp  triangle_geometry.cpp
src/dioptre/keyboard/: keyboard_interface.cpp
src/dioptre/keyboard/glfw/: keyboard.cpp
src/dioptre/keyboard/handlers/: exit_game.cpp  exit_game.h  toggle_debug.cpp
src/dioptre/math/: id.cpp  triangle.cpp
src/dioptre/mouse/: mouse_interface.cpp
src/dioptre/mouse/glfw/: mouse.cpp
src/dioptre/physics/: component.cpp  physics_interface.cpp  rigid_body.cpp  transform_observer.cpp  world.cpp
src/dioptre/physics/bullet/: box_shape.cpp  debug_drawer.cpp  physics.cpp  rigid_body.cpp
src/dioptre/time/glfw/: time.cpp
src/dioptre/window/glfw/: window.cpp
src/dioptre/window/null/: window.cpp
src/engine/: CMakeLists.txt  graphics.cpp
src/game/: CMakeLists.txt  appinfo.h  main.cpp
src/game/objects/: command_centre.cpp  command_centre.h  human_player.cpp  human_player.h  map.cpp  map.h  unit.cpp  unit.h
src/game/objects/components/: edge_scroll_component.cpp  edge_scroll_component.h
src/launcher/: CMakeLists.txt  main.cpp
src/level-editor/: .gitignore  CMakeLists.txt  glwidget.cpp  glwidget.h  level-editor.pro  main.cpp  mainwindow.ui
src/rts/: CMakeLists.txt  ability.cpp  command_centre.cpp  game_object.cpp  human_player.cpp  map.cpp  selector.cpp  text.cpp  unit.cpp
src/rts/abilities/: move.cpp
src/rts/components/: edge_scroll_component.cpp
test/: CMakeLists.txt  main.cpp  matcher.h  sanity_check.cpp  test.h
test/dioptre/: application.cpp  component_interface.cpp  locator.cpp  object.cpp  transform.cpp
test/dioptre/ai/detour/: navigation_mesh.cpp
test/dioptre/ai/recast/: navigation_mesh.cpp
test/dioptre/filesystem/: lookup_path.cpp
test/dioptre/graphics/: atlas.cpp  box_geometry.cpp  transform.cpp  triangle.cpp
test/dioptre/keyboard/handlers/: exit_game.cpp
test/dioptre/mouse/: mouse_interface.cpp
test/fixtures/fonts/: open_sans_regular_14.xml
test/rts/: human_player.cpp  unit.cpp
test/support/: another_test_object.h  test_box_geometry.h  test_component.h  test_object.h
textures/: ground.dds  selection.dds
tools/share/cmake/: FindLog4Cxx.cmake  c_flag_overrides.cmake  cxx_flag_overrides.cmake
(+37 files in other folders)
