FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
SET (
  project_LIBS
  rts
  engine
  glfw
  ${GLFW_LIBRARIES}
  BulletDynamics
  BulletCollision
  LinearMath
  libglew_static
  physfs-static
)
SET (project_BIN launcher)

SET (project_EXTRAS)

IF (APPLE)
  LIST (APPEND project_EXTRAS MACOSX_BUNDLE)
  # IF (EXISTS icon.icns)
  #   LIST (APPEND project_EXTRAS icon.icns)
  #   SET_SOURCE_FILES_PROPERTIES("icon.icns" PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
  # ENDIF()
  LIST (APPEND project_EXTRAS ${shader_SRCS} ${texture_SRCS} ${font_SRCS})
  FOREACH(SHADER ${shader_SRCS})
    SET_SOURCE_FILES_PROPERTIES(${SHADER} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
  ENDFOREACH()

  FOREACH(TEXTURE ${texture_SRCS})
    SET_SOURCE_FILES_PROPERTIES(${TEXTURE} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
  ENDFOREACH()

  FOREACH(FONT ${font_SRCS})
    SET_SOURCE_FILES_PROPERTIES(${FONT} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
  ENDFOREACH()
ENDIF()

ADD_EXECUTABLE(
  ${project_BIN}
  ${project_EXTRAS}
  ${project_SRCS}
)

TARGET_LINK_LIBRARIES(
  ${project_BIN}
  ${project_LIBS}
)

SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)

IF (APPLE)
  # SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES MACOSX_BUNDLE_ICON_FILE "icon.icns")

  SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME ${project_BIN})
  SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES MACOSX_BUNDLE_SHORT_VERSION_STRING ${APPLICATION_VERSION_STRING})
  SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES MACOSX_BUNDLE_LONG_VERSION_STRING ${APPLICATION_VERSION_STRING})
  SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES MACOSX_BUNDLE_INFO_STRING ${APPLICATION_NAME})
ELSE ()
  ADD_CUSTOM_COMMAND(TARGET launcher POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
      ${CMAKE_SOURCE_DIR}/assets/shaders $<TARGET_FILE_DIR:launcher>
  )

  ADD_CUSTOM_COMMAND(TARGET launcher POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
      ${CMAKE_SOURCE_DIR}/assets/textures $<TARGET_FILE_DIR:launcher>
  )

  ADD_CUSTOM_COMMAND(TARGET launcher POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
      ${CMAKE_SOURCE_DIR}/assets/fonts $<TARGET_FILE_DIR:launcher>
  )
ENDIF ()

INSTALL(TARGETS ${project_BIN} DESTINATION bin)
