SET (project_BIN ${PROJECT_NAME}-editor)
SET (project_LIBS libglew_static ${ZLIB_LIBRARY} physfs-static ${OPENGL_LIBRARIES})

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
FIND_PACKAGE(Qt5Widgets)
FIND_PACKAGE(Qt5OpenGL)

SET (project_EXTRAS)

IF (APPLE)
  LIST (APPEND project_EXTRAS MACOSX_BUNDLE)
  # IF (EXISTS icon.icns)
  #   LIST (APPEND project_EXTRAS icon.icns)
  #   SET_SOURCE_FILES_PROPERTIES("icon.icns" PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
  # ENDIF()
ENDIF()

ADD_EXECUTABLE(
  ${project_BIN}
  ${project_EXTRAS}
  main.cpp
  mainwindow.cpp
  glwidget.cpp
)
TARGET_LINK_LIBRARIES(
  ${project_BIN}
  ${project_LIBS}
  engine
  Qt5::Widgets
  Qt5::OpenGL
)

# Copy shaders
ADD_CUSTOM_COMMAND(TARGET rts-editor POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${CMAKE_SOURCE_DIR}/shaders $<TARGET_FILE_DIR:rts-editor>
)

# Copy Qt files
IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	SET(QT_BIN_DIR ${Qt5Core_DIR}/../../../bin)
	ADD_CUSTOM_COMMAND(TARGET rts-editor POST_BUILD
	  COMMAND ${CMAKE_COMMAND} -E copy ${QT_BIN_DIR}/Qt5Widgetsd.dll $<TARGET_FILE_DIR:rts-editor>
	  COMMAND ${CMAKE_COMMAND} -E copy ${QT_BIN_DIR}/Qt5Guid.dll $<TARGET_FILE_DIR:rts-editor>
	  COMMAND ${CMAKE_COMMAND} -E copy ${QT_BIN_DIR}/Qt5Cored.dll $<TARGET_FILE_DIR:rts-editor>
	  COMMAND ${CMAKE_COMMAND} -E copy ${QT_BIN_DIR}/icuin53.dll $<TARGET_FILE_DIR:rts-editor>
	  COMMAND ${CMAKE_COMMAND} -E copy ${QT_BIN_DIR}/icuuc53.dll $<TARGET_FILE_DIR:rts-editor>
	  COMMAND ${CMAKE_COMMAND} -E copy ${QT_BIN_DIR}/icudt53.dll $<TARGET_FILE_DIR:rts-editor>
	)
ENDIF()

IF (APPLE)
  # SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES MACOSX_BUNDLE_ICON_FILE "icon.icns")

  SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME ${project_BIN})
  SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES MACOSX_BUNDLE_SHORT_VERSION_STRING ${APPLICATION_VERSION_STRING})
  SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES MACOSX_BUNDLE_LONG_VERSION_STRING ${APPLICATION_VERSION_STRING})
  SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES MACOSX_BUNDLE_INFO_STRING ${APPLICATION_NAME})
ENDIF ()

INSTALL(TARGETS ${project_BIN} DESTINATION bin)
